tests/typing/bad/testfile-while-3.c

union S { int a; };
int main() { union S s; while(s); }

